--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             >
               <i class="fab fa-github"></i>
             </a>
-            <a href="#" target="_blank" class="social__link click">
+            <a href="./assets/Campbell Moroney Resume.pdf" target="_blank" class="social__link click">
               <i class="fas fa-file-pdf"></i>
             </a>
           </div>
