Added description and link for Library project

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
             >
               <i class="fab fa-github"></i>
             </a>
-            <a href="./assets/Campbell Moroney Resume.pdf" target="_blank" class="social__link click">
+            <a
+              href="./assets/Campbell Moroney Resume.pdf"
+              target="_blank"
+              class="social__link click"
+            >
               <i class="fas fa-file-pdf"></i>
             </a>
           </div>
@@ -290,25 +294,28 @@
                 <div class="project__wrapper--bg">
                   <div class="project__description">
                     <h3 class="project__description--title">
-                      Car Sales Project
+                      Nested Comments System
                     </h3>
                     <h4 class="project__description--sub-title">
-                      HTML, CSS, JavaScript, React
+                      JavaScript, React, Node.js, PostgreSQL, Prisma, CSS
                     </h4>
                     <p class="project__description--para">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Nihil ipsam voluptate dolor distinctio obcaecati harum,
-                      illo necessitatibus placeat, quibusdam magni quas expedita
-                      error doloremque officia! Impedit doloribus natus
-                      repellendus autem.
+                      Complex fully functional full-stack comments system with
+                      likes, comments, editing and deleting. Uses a local
+                      PostgreSQL database populated with Prisma. Back-end
+                      retrieves data from the database and connects this with
+                      the front-end React application. Exhaustive React +
+                      Javascript logic using state and hooks to facilitate
+                      comments system.
                     </p>
                     <div class="project__description--links">
-                      <a href="#" class="project__description--link">
+                      <a
+                        href="https://github.com/Campbellmoroney/Nested-Comments-Project"
+                        class="project__description--link"
+                      >
                         <i class="fab fa-github"></i>
                       </a>
-                      <a href="#" class="project__description--link">
-                        <i class="fas fa-link"></i>
-                      </a>
+                      <a href="#" class="project__description--link"> </a>
                     </div>
                   </div>
                 </div>
@@ -330,17 +337,21 @@
                       HTML, CSS, JavaScript
                     </h4>
                     <p class="project__description--para">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Nihil ipsam voluptate dolor distinctio obcaecati harum,
-                      illo necessitatibus placeat, quibusdam magni quas expedita
-                      error doloremque officia! Impedit doloribus natus
-                      repellendus autem.
+                      Front-end for an e-commerce store for books named
+                      "Library". Showcases excellent user experience and design
+                      with CSS, as well as usage of HTML and CSS best practices.
                     </p>
                     <div class="project__description--links">
-                      <a href="https://github.com/Campbellmoroney/Library-eCommerce" class="project__description--link">
+                      <a
+                        href="https://github.com/Campbellmoroney/Library-eCommerce"
+                        class="project__description--link"
+                      >
                         <i class="fab fa-github"></i>
                       </a>
-                      <a href="https://campbellmoroney.github.io/Library-eCommerce/" class="project__description--link">
+                      <a
+                        href="https://campbellmoroney.github.io/Library-eCommerce/"
+                        class="project__description--link"
+                      >
                         <i class="fas fa-link"></i>
                       </a>
                     </div>
