Added example picture for comments project

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <li class="project">
               <div class="project__wrapper">
                 <img
-                  src="./assets/library.png"
+                  src="./assets/example-comments-project.png"
                   class="project__img"
                   alt="project 2"
                 />
