Fixed node.js logo

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
               >Contact</a
             >
             <a
-              href="#"
+              href="./assets/Campbell Moroney Resume.pdf"
               class="footer__social--link link__hover-effect link__hover-effect--white"
               >Resume</a
             >
